<resources>
    <string name="app_name">Softij</string>
    <string name="desc_search_btn">Search Button</string>
    <string name="desc_account_image">User Image</string>
    <string name="desc_product_image">product image</string>
    <string name="text_hello">Hello %1$s</string>
    <string name="search">Search</string>
    <string name="desc_open_navigation_drawer">Open Navigation Menu</string>
    <string name="desc_close_navigation_drawer">Close Navigation Menu</string>
    <string name="title_my_acc">My Account</string>
    <string name="btn_wishlist">WishList</string>
    <string name="title_my_wishlist">My WishList</string>
    <string name="title_my_order">My Orders</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="btn_add_cart">Add To Cart</string>
    <string name="text_product_price">\u20B9 %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_product">Product</string>
    <string name="text_viewed">%1$s Viewed</string>
    <string name="text_desc">Description</string>
    <string name="text_stock">%1$s left</string>
    <string name="text_date_available">Available From: %1$s</string>
    <string name="text_order_date">Order Placed On: %1$s</string>
    <string name="text_order_status">Status: %1$s</string>
    <string name="text_order_quantity">Quantity: %1$s</string>
    <string name="switch_news">Newsletter</string>
    <string name="btn_acc_edit">Edit User Information</string>
    <string name="btn_cng_pass">Change Password</string>
    <string name="btn_address">Manage Addresses</string>
    <string name="desc_edit_fname">First Name</string>
    <string name="desc_edit_lname">Last Name</string>
    <string name="desc_edit_Email"> Email</string>
    <string name="desc_edit_phone">Phone Number</string>
    <string name="btn_save">Save</string>
    <string name="title_edit">Edit Profile</string>
    <string name="desc_acc_password">Password</string>
    <string name="desc_acc_new_password">New Password</string>
    <string name="desc_acc_password_confirm">Confirm Password</string>
    <string name="title_cng_password">New Password</string>
    <string name="msg_loading">Loading…</string>
    <string name="desc_address_add">Add Address</string>
    <string name="desc_address1">Address 1</string>
    <string name="desc_address2">Address 2</string>
    <string name="desc_state">State</string>
    <string name="desc_city">City</string>
    <string name="desc_postcode">PostCode</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="title_edit_addy">Edit Address</string>
    <string name="title_add_addy">Add Address</string>
    <string name="telangana">Telangana</string>
    <string name="msg_invalid_email">Invalid Email</string>
    <string name="msg_invalid_name">first name and lastname <br/> must have  4  or more characters</string>
    <string name="msg_invalid_phone">Invalid Phone Number</string>
    <string name="msg_invalid_addy">address 1 and address 2 length should be between 4 to 30</string>
    <string name="msg_invalid_city">city length >= 4</string>
    <string name="msg_invalid_postcode">postcode should be 8 characters</string>
    <string name="msg_search">No Products Found</string>
    <string name="cart_hint_price">Total \u20B9 </string>
    <string name="cart_item">%1$s item(s)</string>
    <string name="cart_checkout">Checkout</string>
    <string name="msg_no_address">No saved Addresses</string>
    <string name="payment">Payment Method : COD</string>

    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="newsletter">Newsletter</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Dont Have an account?</string>
    <string name="submit">Submit</string>

</resources>