<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/addy_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addy_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_edit_fname"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_edit_fname"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/addy_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_title" />

        <EditText
            android:id="@+id/addy_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_edit_lname"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_edit_lname"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addy_firstname"
            app:layout_constraintTop_toTopOf="@+id/addy_firstname" />

        <EditText
            android:id="@+id/addy_address1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_address1"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_address1"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_firstname" />

        <EditText
            android:id="@+id/addy_address2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_address2"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_address2"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_address1" />

        <EditText
            android:id="@+id/addy_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_state"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_city"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_address2" />

        <EditText
            android:id="@+id/addy_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_state"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_state"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            android:text="@string/telangana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_city" />

        <EditText
            android:id="@+id/addy_postcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/desc_postcode"
            android:background="@drawable/edit_text_background"
            android:hint="@string/desc_postcode"
            android:inputType="number"
            android:maxLength="6"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_state" />

        <Button
            android:id="@+id/addy_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#a8dadc"
            android:text="@string/btn_save"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addy_postcode" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
